--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ posthog-rs = { version = "0.3", default-features = false, features = ["async-cli
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2"
-uuid = { version = "1.13", features = ["v7", "serde"] }
 parking_lot = "0.12"
 chrono = { version = "0.4", features = ["serde"] }
+machine-uid = "0.5"
 
 [build-dependencies]
 tauri-plugin = { version = "2.4.0", features = ["build"] }
