--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "tauri-plugin-posthog"
 version = "0.1.0"
-authors = [ "You" ]
-description = ""
+authors = [ "ahonn" ]
+description = "A Tauri v2 plugin for integrating PostHog analytics into your Tauri applications"
 edition = "2021"
 rust-version = "1.77.2"
 exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
