feat: implement hybrid architecture with PostHog JS SDK integration

--- a/examples/tauri-app/.env.example
+++ b/examples/tauri-app/.env.example
@@ -1,2 +1,8 @@
-# PostHog configuration
+# PostHog Configuration
+# Replace with your actual PostHog project API key from https://posthog.com/project/settings
 POSTHOG_API_KEY=phc_your_api_key_here
+
+# PostHog API Host (optional, defaults to https://us.i.posthog.com)
+# For EU users: https://eu.i.posthog.com
+# For self-hosted: https://your-posthog-instance.com
+POSTHOG_API_HOST=https://us.i.posthog.com
