--- a/examples/tauri-app/src-tauri/Cargo.toml
+++ b/examples/tauri-app/src-tauri/Cargo.toml
@@ -20,5 +20,5 @@ tauri-build = { version = "2.4.1", default-features = false , features = [] }
 [dependencies]
 tauri = { version = "2.8.5", features = [] }
 tauri-plugin-posthog = { path = "../../../" }
-dotenvy_macro = "0.15"
+dotenvy = "0.15"
 
