--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pretest": "pnpm build"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.0.0"
+    "@tauri-apps/api": "^2.0.0",
+    "posthog-js": "^1.157.2"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.0.0",
