--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ thiserror = "2"
 parking_lot = "0.12"
 chrono = { version = "0.4", features = ["serde"] }
 machine-uid = "0.5"
+tokio = { version = "1", features = ["sync"] }
 
 [build-dependencies]
 tauri-plugin = { version = "2.4.0", features = ["build"] }
